# azure-copilot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  POMODORO_PLAN.md  README.md  cli.py  config.py  pyproject.toml  roadmap.md
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py
